<resources>
    <string name="app_name">PanPlaner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintUsername">Username</string>
    <string name="hintEmail">Email</string>
    <string name="buttonADD">Add</string>
    <string name="hintPassword">Password</string>
    <string name="textProjects">ProjectName</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="textProjectName">Name of the project</string>
    <string name="textDeadline">Select deadline</string>
    <string name="textAddUserToProject">Add another user to your project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_delete">Delete</string>
    <string name="label_dashboard_deadline">Next Deadline</string>
    <string name="label_dashboard_members">Members</string>
    <string name="text_chat_hint">Type here...</string>
    <string name="button_chat">Chat</string>
</resources>
