<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DashboardFragment"
                                                   android:background="@color/colorPrimaryDark">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:src="@tools:sample/avatars"
            tools:layout_editor_absoluteX="141dp" android:id="@+id/imageView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/textProjectName"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/textView3" android:layout_marginBottom="36dp"
            app:layout_constraintStart_toStartOf="@+id/imageView" app:layout_constraintEnd_toEndOf="@+id/imageView"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <Button
            android:text="@string/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="667dp"
            tools:layout_editor_absoluteX="161dp" android:id="@+id/button"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="124dp" tools:layout_editor_absoluteY="258dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:id="@+id/recyclerView2"
            android:layout_marginStart="16dp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:id="@+id/recyclerView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/label_dashboard_deadline"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView2"/>
    <TextView
            android:text="@string/label_dashboard_members"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView2"/>

</androidx.constraintlayout.widget.ConstraintLayout>