<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".createProjectFragment"
                                                   android:background="@color/colorPrimaryDark">
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextProjectName" android:hint="@string/textProjectName" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="60dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent" android:background="@drawable/rounded_edit_text"/>
    <EditText
            android:layout_width="0dp"
            android:paddingLeft="20dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextUser"
            android:hint="@string/textAddUserToProject" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextProjectName"
            app:layout_constraintEnd_toEndOf="@+id/editTextProjectName"
            app:layout_constraintStart_toStartOf="@+id/editTextProjectName" android:background="@drawable/rounded_edit_text"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="date"
            android:ems="10"
            android:paddingLeft="20dp"
            android:id="@+id/editDeadline" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextUser"
            app:layout_constraintEnd_toEndOf="@+id/editTextUser" app:layout_constraintStart_toStartOf="@+id/editTextUser"
            android:hint="@string/textDeadline" android:background="@drawable/rounded_edit_text"/>
    <Button
            android:text="Create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:id="@+id/buttonCreateProject" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editDeadline" app:layout_constraintEnd_toEndOf="@+id/editDeadline"
            app:layout_constraintStart_toStartOf="@+id/editDeadline" android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>