<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".SignUpFragment"
                                                   android:background="@color/colorPrimary">
    <EditText
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextUsernameSignUp" android:layout_marginTop="45dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:background="@android:color/background_light"
            android:hint="@string/hintUsername"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmailSignUp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsernameSignUp"
            app:layout_constraintEnd_toEndOf="@+id/editTextUsernameSignUp"
            app:layout_constraintStart_toStartOf="@+id/editTextUsernameSignUp"
            android:background="@android:color/background_light" android:hint="@string/hintEmail"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPasswordSignUp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignUp"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmailSignUp"
            app:layout_constraintStart_toStartOf="@+id/editTextEmailSignUp"
            android:background="@android:color/background_light" android:hint="@string/hintPassword"/>
    <Button
            android:text="Submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSubmitSignUp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignUp"
            app:layout_constraintEnd_toEndOf="@+id/editTextPasswordSignUp"
            app:layout_constraintStart_toStartOf="@+id/editTextPasswordSignUp" app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginEnd="60dp" android:layout_marginStart="60dp"/>
    <TextView
            android:text="Already signed up?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAlreadySignedUpSignUp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSubmitSignUp" app:layout_constraintEnd_toEndOf="@+id/buttonSubmitSignUp"
            app:layout_constraintStart_toStartOf="@+id/buttonSubmitSignUp"/>
</androidx.constraintlayout.widget.ConstraintLayout>